--- a/css/ageifrm.css
+++ b/css/ageifrm.css
@@ -41,13 +41,14 @@
     -o-transition: background-color 0.2s ease;
     transition: background-color 0.2s ease;
 }
-.ifrm_box:hover .ifrm_over{
+.ifrm_box:hover .ifrm_over,.ifrm_box:active .ifrm_over,.ifrm_box:focus .ifrm_over{
     background-color: rgba(240,132,101, 0.4);
 }
 .ifrm_date{
     font-family: poppins;
     font-weight: 400;
     margin:30px 0px 0px 20px;
+    text-shadow: 0px 0px 10px rgb(0,0,0);
     color: rgb(255,255,255);
     font-size: 16px;
     left: 0%;
@@ -74,7 +75,7 @@
     color: rgb(30,30,30);
     margin-right: 26px;
 }
-.ifrm_box:hover .ifrm_date{
+.ifrm_box:hover .ifrm_date,.ifrm_box:active .ifrm_date,.ifrm_box:focus .ifrm_date{
     font-weight: 600
 }
 @media only screen and (max-width: 500px){
@@ -102,6 +103,9 @@
 }
 }
 @media only screen and (max-width: 460px){
+    .ifrm_over{
+    background-color: rgba(255,255,255, 0.8);
+}
     .ageifrm_m{
     width: 100%;
     display: flex;
@@ -124,19 +128,19 @@
 }
 .ifrm_pics{
     width: 100%;
-    height:160px;
+    height:180px;
     margin-bottom: 0px;
 }
     .ifrm_date{
     font-family: poppins;
+        text-shadow: 0px 0px 0px rgb(30,30,30);
     font-weight: 400;
     margin:20px 0px 0px 20px;
-    color: rgb(255,255,255);
+    color: rgb(30,30,30);
     font-size: 18px;
     left: 0%;
     top: 0%;
     transform: translate(-0%,-0%);
-        text-shadow: 0px 0px 6px rgb(30,30,30);
     z-index: 5;
     position: absolute;
     -webkit-transition: font-weightr 0.2s ease;
@@ -147,13 +151,16 @@
 .ifrm_titl{
     left: 0%;
     top: 0%;
-    text-shadow: 0px 0px 6px rgb(30,30,30);
+    text-shadow: 0px 0px 0px rgb(30,30,30);
     font-size: 18px;
     line-height: 24px;
     transform: translate(-0%,-0%);
     z-index: 5;
     position: absolute;
-    margin:60px 80px 0px 20px;
+    margin:90px 80px 0px 20px;
+}
+   .ifrm_box:hover .ifrm_titl,.ifrm_box:active .ifrm_titl,.ifrm_box:focus .ifrm_titl{
+    text-shadow: 0px 0px 6px rgb(30,30,30);
 }
     .ifrm_txt{
     display: none;
@@ -167,13 +174,13 @@
     .ifrm_titl{
     font-size: 16px;
         line-height: 22px;
-    margin:60px 80px 0px 20px;
+    margin:80px 80px 0px 20px;
 }
 }
 @media only screen and (max-width: 300px){
     .ifrm_pics{
     width: 100%;
-    height:150px;
+    height:160px;
     margin-bottom: 0px;
 }
     .ifrm_date{
@@ -183,6 +190,6 @@
     .ifrm_titl{
     font-size: 14px;
         line-height: 20px;
-    margin:50px 80px 0px 20px;
+    margin:70px 80px 0px 20px;
 }
 }
