--- a/css/agend.css
+++ b/css/agend.css
@@ -353,7 +353,7 @@ nav{
     }
     .age_localv{
         width: 100%;
-    height: 860px;
+    height: 1000px;
 }
     .age_actbox1, .age_actbox2{
     margin:0px 0px 20px 0px;
@@ -397,6 +397,13 @@ nav{
      #agendmain{
         margin-top: 100px;
         padding: 0px 0px 0px 0px;
+}
+    
+}
+@media only screen and (max-width: 320px){
+.age_localv{
+        width: 100%;
+    height: 900px;
 }
 }
 @media only screen and (max-height: 420px){
