--- a/css/agend.css
+++ b/css/agend.css
@@ -24,6 +24,14 @@ nav{
 .age_holdb{
     width: 720px;
 }
+.age_holdc{
+    margin-bottom: 40px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    display: -webkit-flex;
+    -webkit-flex-direction: column;
+}
 .age_titl{
     font-family: Poppins;
     font-weight: 600;
@@ -58,7 +66,7 @@ nav{
     font-family: Poppins;
     font-weight: 400;
     font-size: 20px;
-    margin-top: 60px;
+    margin-top: 20px;
 }
 .age_localh, .age_holdsec1{
     display: flex;
@@ -207,7 +215,7 @@ nav{
     }
     .age_btxt{
     width: 100%;
-        margin-left: 200px;
+        margin-left: 0px;
 }
     .age_actbox1, .age_actbox2{
     margin-right: 0px; 
@@ -255,7 +263,7 @@ nav{
         flex-direction: column;
         -webkit-flex-direction: column;
     }
-    .age_holda{
+    .age_holda,.age_holdc{
         box-sizing: border-box;
         padding: 0px 40px 0px 40px;
     }
@@ -321,7 +329,7 @@ nav{
     .age_stitl{
         padding: 0px 160px 0px 30px;
     }
-    .age_holda{
+    .age_holda,.age_holdc{
         padding: 0px 30px 0px 30px;
     }
     .age_titl{
@@ -333,7 +341,7 @@ nav{
 }
 }
 @media only screen and (max-width: 540px){
-    .age_holda{
+    .age_holda,.age_holdc{
         box-sizing: border-box;
         padding: 0px 0px 0px 0px;
     }
@@ -347,7 +355,7 @@ nav{
     }
 }
 @media only screen and (max-width: 460px){
-    .age_holda{
+    .age_holda,.age_holdc{
         box-sizing: border-box;
         padding: 0px 0px 0px 0px;
     }
